--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,15 +23,15 @@ jobs:
       uses: docker-practice/actions-setup-docker@master
 
     - name: Docker login
-      run: docker login -u=${{ DOCKER_USERNAME }} -p=${{ DOCKER_PASSWORD }}
+      run: docker login -u=${ DOCKER_USERNAME } -p=${ DOCKER_PASSWORD }
 
     #Build the dockerfile
     - name: Docker build
-      run: docker build . -t ${{ DOCKER_USERNAME }}/todo_app_maxdrive
+      run: docker build . -t ${ DOCKER_USERNAME }/todo_app_maxdrive
 
     #Push the dockerfile
     - name: Docker push
-      run: docker push ${{ DOCKER_USERNAME }}/todo_app_maxdrive
+      run: docker push ${ DOCKER_USERNAME }/todo_app_maxdrive
 
   terraform:
     name: 'Terraform'
