--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,8 +1,8 @@
-name: 'Build todo app and deploy into a cloud run service on GCP'
+name: 'Build todo app and push to the dockerhub'
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "feature/ci_cd_pipeline" ]
   pull_request:
 
 permissions:
@@ -22,6 +22,7 @@ jobs:
     - name: Docker install
       uses: docker-practice/actions-setup-docker@master
 
+    #Login to dockerhub
     - name: Docker login
       run: docker login -u=${{ secrets.DOCKER_USERNAME }} -p=${{ secrets.DOCKER_PASSWORD }}
 
@@ -29,64 +30,7 @@ jobs:
     - name: Docker build
       run: docker build . -t ${{ secrets.DOCKER_USERNAME }}/todo_app_maxdrive
 
-    #Push the dockerfile
+    #Push the dockerfile to dockerhub
     - name: Docker push
       run: docker push ${{ secrets.DOCKER_USERNAME }}/todo_app_maxdrive
 
-  terraform:
-    name: 'Terraform'
-    runs-on: ubuntu-latest
-
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-    defaults:
-      run:
-        shell: bash
-        working-directory: ./terraform
-
-    steps:
-    # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v3
-
-    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
-
-        
-    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    - name: Terraform Init
-      run: terraform init
-      env:
-        GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }} 
-
-
-    # Generates an execution plan for Terraform
-    - name: Terraform Plan
-      run: terraform plan -input=false
-      env:
-        GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
-
-      # On push to "master", build or change infrastructure according to Terraform configuration files
-    - name: Terraform Apply
-      if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-      run: terraform apply -auto-approve -input=false
-      env:
-        GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
-
-    # Generates the outputs which include the cloud run service url to reach our todo app.
-    - name: Terraform Ouptut
-      run: terraform output
-      env:
-        GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
-
-    # We want the runner to sleep for 2min which is more than enough to checkout the to-do app.
-    - name: Sleep for 120 seconds{2 minute}
-      uses: jakejarvis/wait-action@master
-      with:
-        time: '120s'
-
-    # Destroy the TF resources after 2 minutes
-    - name: Terraform Destroy
-      run: terraform destroy -auto-approve -input=false
-      env:
-        GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
