--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,13 +24,13 @@ jobs:
 
     #Login to dockerhub
     - name: Docker login
-      run: docker login -u=${{ secrets.DOCKER_USERNAME }} -p=${{ secrets.DOCKER_PASSWORD }}
+      run: docker login -u=${{ vars.DOCKER_USERNAME }} -p=${{ secrets.DOCKER_PASSWORD }}
 
     #Build the dockerfile
     - name: Docker build
-      run: docker-compose up --build
+      run: docker build . -t ${{ vars.DOCKER_USERNAME }}/maxdrive:ai
 
     #Push the dockerfile to dockerhub
     - name: Docker push
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/todo_app_maxdrive
+      run: docker push ${{ vars.DOCKER_USERNAME }}/todo_app_maxdrive
 
