--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,9 +28,9 @@ jobs:
 
     #Build the dockerfile
     - name: Docker build
-      run: docker build . -t ${{ vars.DOCKER_USERNAME }}/maxdrive:ai
+      run: docker build . -t ${{ vars.DOCKER_USERNAME }}/maxdrive:todo
 
     #Push the dockerfile to dockerhub
     - name: Docker push
-      run: docker push ${{ vars.DOCKER_USERNAME }}/todo_app_maxdrive
+      run: docker push ${{ vars.DOCKER_USERNAME }}/maxdrive:todo
 
